@@ -6,41 +6,31 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.util.List;
+import moaon.backend.article.dto.ArticleCrawlResponse;
 import moaon.backend.global.exception.custom.CustomException;
 import moaon.backend.global.exception.custom.ErrorCode;
-import org.openqa.selenium.By;
 
 public class VelogContentFinder extends ContentFinder {
+
     /*
     벨로그가 사용중인 도메인: velog.io
     이 외 사용자 지정 도메인은 BodyFinder 가 수행한다.
      */
-
     @Override
-    public boolean canHandle(String link) {
-        try {
-            URL url = new URL(link);
-            String host = url.getHost();
-
-            return host.endsWith("velog.io");
-        } catch (MalformedURLException e) {
-            return false;
-        }
+    public ArticleCrawlResponse crawl(String url) {
+        JsonNode post = getPost(url);
+        String title = post.path("title").asText();
+        String summary = post.path("summary").asText();
+        return new ArticleCrawlResponse(title, summary);
     }
 
-    @Override
-    protected List<By> getBy(String link) {
-        return List.of(By.cssSelector("div.atom-one"));
-    }
-
-    @Override
-    protected void validateLink(String link) {
+    private JsonNode getPost(String link) {
         try {
-            URL url = new URL(link);
+            URL url = URI.create(link).toURL();
             String[] parts = url.getPath().split("/");
 
             if (parts.length < 3) {
@@ -50,9 +40,20 @@ public class VelogContentFinder extends ContentFinder {
             String username = parts[1].replaceFirst("@", "");
             String urlSlug = URLDecoder.decode(parts[2], StandardCharsets.UTF_8);
 
+//            String graphqlQuery = """
+//                    {
+//                      "query": "query($username: String!, $url_slug: String!) { post(username: $username, url_slug: $url_slug) { id title } }",
+//                      "variables": {
+//                        "username": "%s",
+//                        "url_slug": "%s"
+//                      }
+//                    }
+//                    """.formatted(username, urlSlug);
+
             String graphqlQuery = """
                     {
-                      "query": "query($username: String!, $url_slug: String!) { post(username: $username, url_slug: $url_slug) { id title } }",
+                      "query":"query ReadPost($username: String, $url_slug: String) { post(username: $username, url_slug: $url_slug) { title body short_description} }",
+                      "operationName":"ReadPost",
                       "variables": {
                         "username": "%s",
                         "url_slug": "%s"
@@ -60,7 +61,8 @@ public class VelogContentFinder extends ContentFinder {
                     }
                     """.formatted(username, urlSlug);
 
-            HttpURLConnection connection = (HttpURLConnection) new URL("https://v2.velog.io/graphql").openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create("https://v2.velog.io/graphql").toURL()
+                    .openConnection();
             connection.setRequestMethod("POST");
             connection.setRequestProperty("Content-Type", "application/json");
             connection.setDoOutput(true);
@@ -77,9 +79,22 @@ public class VelogContentFinder extends ContentFinder {
             if (postNode.isNull() || postNode.isMissingNode()) {
                 throw new CustomException(ErrorCode.ARTICLE_URL_NOT_FOUND);
             }
+            return postNode;
 
         } catch (IOException e) {
             throw new CustomException(ErrorCode.UNKNOWN);
+        }
+    }
+
+    @Override
+    public boolean canHandle(String link) {
+        try {
+            URL url = URI.create(link).toURL();
+            String host = url.getHost();
+
+            return host.endsWith("velog.io");
+        } catch (MalformedURLException e) {
+            return false;
         }
     }
 }
